Update artifact property
Change-Id: Ib5a1697bd604c85899842751ed3a20c48b4fb2bf

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,4 +14,4 @@ deploy:
     symbol_server: https://ci.appveyor.com/nuget/cristina-tapes-7qs0g4us7vw4/api/v2/package
     api_key:
       secure: 3QOcYJQfDzYQTMmXxWrKKZaRlHDWwZQIdrFnQWbx7dk=
-    artifact: /.*\.symbols\.nupkg/
+    artifact: /.*\.nupkg/
