Add after build action to pack project
Change-Id: I59a77b8d05ccd4e2816930f35d6e4c06806c965a

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,17 +1,23 @@
 image: Visual Studio 2017
 
 configuration: Release 
-  
+
 before_build:
-  - nuget restore
+    - nuget restore
 
 build:
-  project: Atdl4net.sln
-  verbosity: minimal
+    project: Atdl4net.sln
+    verbosity: minimal
+  
+after_build:
+    - nuget pack Atdl4net/Atdl4net.csproj -properties Configuration=%configuration%
+    
+artifacts:
+    - path: '*.nupkg'
 
 deploy:
-  - provider: NuGet
-    symbol_server: https://ci.appveyor.com/nuget/cristina-tapes-7qs0g4us7vw4/api/v2/package
-    api_key:
-      secure: 3QOcYJQfDzYQTMmXxWrKKZaRlHDWwZQIdrFnQWbx7dk=
-    artifact: /.*\.nupkg/
+    - provider: NuGet
+      symbol_server: https://ci.appveyor.com/nuget/cristina-tapes-7qs0g4us7vw4/api/v2/package
+      api_key:
+          secure: x8zjwsEfIfTB19AgjAduiEL4o36mvEWhCKP0GRKtsG0=
+      artifact: /.*\.nupkg/
