Add nuspec file
Change-Id: I471b2e1e87a3a9db731def9d6b43422b5dfceab3

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,7 +10,7 @@ build:
     verbosity: minimal
   
 after_build:
-    - nuget pack Atdl4net/Atdl4net.csproj -properties Configuration=%configuration%
+    - nuget pack Atdl4net/Atdl4net.csproj.nuspec
     
 artifacts:
     - path: '*.nupkg'
