--- a/Atdl4net/Atdl4net.csproj
+++ b/Atdl4net/Atdl4net.csproj
@@ -341,6 +341,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>HumanReadableTypeNames.resx</DependentUpon>
     </Compile>
+    <Compile Include="Utility\DateTimeMixins.cs" />
     <Compile Include="Validation\EditEvaluator.cs">
     </Compile>
     <Compile Include="Notification\INotifyStrategyLoaded.cs">
@@ -581,7 +582,7 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include=".\Resources\ErrorMessages.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>ErrorMessages.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include=".\Resources\InternalErrors.resx">
@@ -589,7 +590,7 @@
       <LastGenOutput>InternalErrors.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Resources\HumanReadableTypeNames.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>HumanReadableTypeNames.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
